--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "es6-promise": "^4.2.5",
+    "isomorphic-fetch": "^2.2.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
