--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
